Removed margin from body so that it centers correctly Added data-toggle=dropdown to all the dropdown links in the navbar (inc_top.tmpl) Added dropdown/link support for both desktop and mobile support (ui.js)  - On the desktop, hover shows the dropdowns, click goes to the link in the li  - On mobile, tap shows the dropdowns, another tap goes to the link in the li

--- a/gui/new/css/less/default.less
+++ b/gui/new/css/less/default.less
@@ -12,7 +12,6 @@ html{
 body{
 	.container();
 	padding: 0px;
-	margin: 0px;
 }
 
 #upgrade-notification{
